--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -21,6 +21,7 @@ body {
 
 .mainpage {
   margin-top: 20px;
+  margin-bottom: 100px;
 }
 
 @import "components/*";
